--- a/wandb_sweep_config.yaml
+++ b/wandb_sweep_config.yaml
@@ -6,12 +6,12 @@ metric:
 parameters:
   tau:
     distribution: uniform
-    min: 0.01
+    min: 0.005
     max: 0.04
   gamma:
     distribution: uniform
     min: 0.49
-    max: 1.96
+    max: 0.99
   use_sde:
     distribution: categorical
     values:
@@ -35,16 +35,16 @@ parameters:
     max: 512
   n_substeps:
     distribution: int_uniform
-    min: 10
-    max: 100
+    min: 2
+    max: 50
   train_freq:
     distribution: int_uniform
     min: 4
-    max: 128
+    max: 8
   buffer_size:
     distribution: int_uniform
     min: 150000
-    max: 600000
+    max: 1000000
   policy_type:
     distribution: categorical
     values:
@@ -72,13 +72,14 @@ parameters:
   max_timesteps:
     distribution: categorical
     values:
-      - 300000
+      - 300_000
   max_ep_steps:
     distribution: categorical
     values:
       - [50]
       - [100]
       - [200]
+      - [400]
   policy_kwargs.log_std_init:
     distribution: int_uniform
     min: -6
@@ -90,7 +91,7 @@ parameters:
   gradient_steps:
     distribution: int_uniform
     min: 4
-    max: 128
+    max: 8
   target_entropy:
     distribution: categorical
     values:
@@ -118,8 +119,7 @@ parameters:
   joint_obstacle_observation:
     distribution: categorical
     values:
-      - all
-      - all2
+      - vectors
   top_quantiles_to_drop_per_net:
     distribution: int_uniform
     min: 1
@@ -127,7 +127,7 @@ parameters:
   stages:
     distribution: categorical
     values:
-      - ["wang_4"]
+      - ["wang_3"]
   prior_steps:
     distribution: categorical
     values:
@@ -152,6 +152,12 @@ parameters:
       - {net_arch: [256, 256]}
       - {net_arch: [256, 128]}
       - {net_arch: [512, 256]}
+      - {net_arch: [512, 512]}
+      - {net_arch: [256, 256, 256]}
+  collision_reward:
+    distribution: int_uniform
+    min: -25
+    max: -500
 
 command:
   - ${env}
